force-app/main/default/objects/Taxes__c/Taxes__c.object-meta.xml
<CustomObject>
    <label>Taxes</label>
    <nameField>
        <label>Airplane Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Taxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>