force-app/main/default/objects/Taxes__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason for not paying taxes</description>
    <label>Reason</label>
    <type>TextArea</type>
</CustomField>