force-app/main/default/objects/Taxes__c/fields/Tax_Day__c.field-meta.xml
<CustomField>
    <fullName>Tax_Day__c</fullName>
    <label>Tax Day</label>
    <type>Date</type>
</CustomField>