force-app/main/default/objects/Taxes__c/fields/Tax_Filing__c.field-meta.xml
<CustomField>
    <fullName>Tax_Filing__c</fullName>
    <label>Tax Filing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Married</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>